--- a/package.json
+++ b/package.json
@@ -11,18 +11,16 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.6",
-    "animate.css": "^4.1.1",
+    "@react-spring/web": "^10.0.3",
     "bootstrap": "^5.2.2",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "nodemailer": "^6.8.0",
+    "embla-carousel-autoplay": "^8.6.0",
+    "embla-carousel-react": "^8.6.0",
+    "lenis": "^1.3.17",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-bootstrap-icons": "^1.9.1",
     "react-dom": "^18.2.0",
-    "react-mailchimp-subscribe": "^2.1.3",
-    "react-multi-carousel": "^2.8.2",
-    "react-on-screen": "^2.1.1"
+    "react-mailchimp-subscribe": "^2.1.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
